@@ -12,6 +12,9 @@ cdebconf (0.49) UNRELEASED; urgency=low
   * Denis Barbier
     - Empty extended descriptions did produce extra vertical space, it is
       now fixed for all supported frontends.  Closes: #219072.
+    - With the newt frontend, display of notes was corrupted when the
+      extended description was shorter than the description.
+      Closes: #218869.
 
  -- Pierre Machard <pmachard@debian.org>  Sat,  1 Nov 2003 11:54:54 +0100
 
